--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="scroll-left">
-<p>All Air-Con International locations will be closed Thursday 11/28 & Friday 11/29 for the Thanksgiving holiday. During this time, please email customerservice@airconint.com </p>
+<p>All Air-Con e Thanksgiving holiday </p>
       </div>
 
 
