2Update index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="scroll-left">
-<p>All Air-Con e Thanksgiving holiday </p>
+<p>All Air-Con e Thanksgiving holiday  lorem lorem orem lorem lorem</p>
       </div>
 
 
