--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="scroll-left">
-<p>All Air-Con e </p>
+<p>All Air-Con e lorem lorem lorem loremlorem lorem lorem</p>
       </div>
 
 
